# FedCoT-Align

./: .gitignore  README.md  project_structure.py  pyproject.toml  requirements.txt
baselines/: centralized_cot.py  fedrag.py  fl_naive_cot.py  multi_agent_centralized.py  standard_fl.py
configs/: datasets.yaml  fl.yaml  model.yaml
configs/experiments/: cot_alignment_ablation.yaml  main_results.yaml  non_iid_ablation.yaml  table1.yaml  table2.yaml  verifier_ablation.yaml
data/: loaders.py  partitioner.py
evaluation/: consistency.py  factuality.py  metrics.py
experiments/: ablation_study.py  main.py
fed/: client.py  server.py  strategy.py  sync.py
models/: fedcot_model.py
models/heads/: projector.py  verifier.py
scripts/: colab.ipynb  run_all_ablations.sh  run_main.sh
tests/: test_data.py  test_setup.py  test_step4.py  test_step5.py  test_step6.py  test_step7.py
training/: local_trainer.py  losses.py
utils/: checkpointing.py  logging.py  seed.py  seeding.py
